@@ -89,7 +89,7 @@ DECL|class|FrozenBufferedDeletes
 class|class
 name|FrozenBufferedDeletes
 block|{
-comment|/* Rough logic: Term is object w/      String field and String text (OBJ_HEADER + 2*POINTER).      Term's text is String (OBJ_HEADER + 4*INT + POINTER +        OBJ_HEADER + text.length*CHAR).      Term's field is String (OBJ_HEADER + 4*INT + POINTER +        OBJ_HEADER + field.length*CHAR). */
+comment|/* Rough logic: Term is object w/      String field and BytesRef text (OBJ_HEADER + 2*POINTER).      String field is (OBJ_HEADER + 4*INT +      POINTER + OBJ_HEADER + CHAR*field.length).      Term's text is BytesRef (OBJ_HEADER + 2*INT + POINTER +      OBJ_HEADER + bytes.length). */
 DECL|field|BYTES_PER_DEL_TERM
 specifier|final
 specifier|static
@@ -102,13 +102,13 @@ name|RamUsageEstimator
 operator|.
 name|NUM_BYTES_OBJECT_REF
 operator|+
-literal|4
+literal|5
 operator|*
 name|RamUsageEstimator
 operator|.
 name|NUM_BYTES_OBJECT_HEADER
 operator|+
-literal|8
+literal|6
 operator|*
 name|RamUsageEstimator
 operator|.
@@ -311,6 +311,64 @@ name|upto
 operator|++
 expr_stmt|;
 block|}
+name|int
+name|termDataBytes
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|Term
+argument_list|,
+name|Integer
+argument_list|>
+name|ent
+range|:
+name|deletes
+operator|.
+name|terms
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+specifier|final
+name|Term
+name|term
+init|=
+name|ent
+operator|.
+name|getKey
+argument_list|()
+decl_stmt|;
+name|termDataBytes
+operator|+=
+name|term
+operator|.
+name|bytes
+argument_list|()
+operator|.
+name|length
+expr_stmt|;
+name|termDataBytes
+operator|+=
+name|term
+operator|.
+name|field
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|*
+name|RamUsageEstimator
+operator|.
+name|NUM_BYTES_CHAR
+expr_stmt|;
+block|}
 name|bytesUsed
 operator|=
 name|terms
@@ -324,6 +382,8 @@ operator|.
 name|length
 operator|*
 name|BYTES_PER_DEL_QUERY
+operator|+
+name|termDataBytes
 expr_stmt|;
 name|numTermDeletes
 operator|=
